@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.9 2012/05/15 08:09:25 adam Exp $
+@comment $NetBSD: PLIST,v 1.10 2012/05/25 20:04:21 adam Exp $
 share/doc/sqlite3/34to35.html
 share/doc/sqlite3/35to36.html
 share/doc/sqlite3/about.html
@@ -76,6 +76,7 @@ share/doc/sqlite3/c3ref/create_collation.html
 share/doc/sqlite3/c3ref/create_function.html
 share/doc/sqlite3/c3ref/create_module.html
 share/doc/sqlite3/c3ref/data_count.html
+share/doc/sqlite3/c3ref/data_directory.html
 share/doc/sqlite3/c3ref/db_config.html
 share/doc/sqlite3/c3ref/db_filename.html
 share/doc/sqlite3/c3ref/db_handle.html
@@ -561,6 +562,7 @@ share/doc/sqlite3/releaselog/3_7_10.html
 share/doc/sqlite3/releaselog/3_7_11.html
 share/doc/sqlite3/releaselog/3_7_12.html
 share/doc/sqlite3/releaselog/3_7_12_1.html
+share/doc/sqlite3/releaselog/3_7_13.html
 share/doc/sqlite3/releaselog/3_7_2.html
 share/doc/sqlite3/releaselog/3_7_3.html
 share/doc/sqlite3/releaselog/3_7_4.html
