@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.9 2012/05/15 08:09:25 adam Exp $
+$NetBSD: distinfo,v 1.10 2012/05/25 20:04:21 adam Exp $
 
-SHA1 (sqlite-doc-3071201.zip) = 0b917812c3c4cb9fdeaf918945aa5bbea2f2ed6b
-RMD160 (sqlite-doc-3071201.zip) = 05ce0e614c2e601d7c81f403b4da3da9c7fc9abf
-Size (sqlite-doc-3071201.zip) = 4088017 bytes
+SHA1 (sqlite-doc-3071300.zip) = 839f471d03de777b050bf585ab6175a27d96c360
+RMD160 (sqlite-doc-3071300.zip) = 8f75103d1ff8a4f5ac8b90663f38985a6fe1204e
+Size (sqlite-doc-3071300.zip) = 3868922 bytes
