@@ -1,7 +1,7 @@
-$NetBSD: distinfo,v 1.21 2012/05/15 08:09:25 adam Exp $
+$NetBSD: distinfo,v 1.22 2012/05/25 20:04:21 adam Exp $
 
-SHA1 (sqlite-autoconf-3071201.tar.gz) = 295b9acdf9c0452017ca1af392c0e5db019e6874
-RMD160 (sqlite-autoconf-3071201.tar.gz) = 8b5f54564ff283532472d9c62ecafc4c7be69569
-Size (sqlite-autoconf-3071201.tar.gz) = 1831193 bytes
+SHA1 (sqlite-autoconf-3071300.tar.gz) = d3833b6ad68db8505d1044f761dd962f415cd302
+RMD160 (sqlite-autoconf-3071300.tar.gz) = 4c9a959c4d2e162b72b90a965d9b68f97088b3c7
+Size (sqlite-autoconf-3071300.tar.gz) = 1845778 bytes
 SHA1 (patch-aa) = d4d0424eec39ede995c2c408dcf51876072d3fea
 SHA1 (patch-ab) = 64a4352b9a8ed0518784837e390541cd4e1bc9aa
