@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.1933 2012/06/11 07:07:26 adam Exp $
+$NetBSD: CHANGES-2012,v 1.1934 2012/06/11 13:42:03 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -2939,3 +2939,6 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated multimedia/mplayer to 1.1 [wiz 2012-06-11]
 	Updated multimedia/mencoder to 1.1 [wiz 2012-06-11]
 	Updated multimedia/gmplayer to 1.1 [wiz 2012-06-11]
+	Updated databases/sqlite3 to 3.7.13 [adam 2012-06-11]
+	Updated databases/sqlite3-docs to 3.7.13 [adam 2012-06-11]
+	Updated databases/sqlite3-tcl to 3.7.13 [adam 2012-06-11]
